<?xml version="1.0"?>
<package format="2">
  <name>pmb3_2dnav_gazebo</name>
  <version>0.0.8</version>
  <description>PMB3-specific launch files needed to run
    navigation on the PMB3 robot.</description>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <license>BSD</license>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pmb3_gazebo</exec_depend>
  <exec_depend>pmb3_2dnav</exec_depend>
</package>

