<?xml version="1.0"?>
<package>
  <name>pmb3_controller_configuration_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo-specifig launch files and scripts needed to configure
    the controllers of the PMB3 robot in simulation.</description>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>diff_drive_controller</run_depend>

</package>
