<?xml version="1.0"?>
<package>
  <name>pmb3_gazebo</name>
  <version>0.0.2</version>
  <description>Simulation files for the PMB3 robot.</description>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pmb3_controller_configuration_gazebo</run_depend>
  <run_depend>pmb3_description</run_depend>
  <run_depend>pal_hardware_gazebo</run_depend>
  <run_depend>pmb3_bringup</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_worlds</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>
  <run_depend>simple_models_gazebo</run_depend>

</package>
