<?xml version="1.0"?>
<package format="2">
  <name>pmb3_gazebo</name>
  <version>0.0.9</version>
  <description>Simulation files for the PMB3 robot.</description>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pmb3_controller_configuration_gazebo</exec_depend>
  <exec_depend>pmb3_description</exec_depend>
  <exec_depend>pal_hardware_gazebo</exec_depend>
  <exec_depend>pmb3_bringup</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <exec_depend>pal_gazebo_plugins</exec_depend>
  <exec_depend>simple_models_gazebo</exec_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>

</package>
