<?xml version="1.0"?>
<package format="2">
  <name>pmb3_simulation</name>
  <version>0.0.5</version>
  <description>PMB3-specific simulation components. These include plugins
               and launch scripts necessary for running PMB3 in simulation.</description>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Garcia</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pmb3_controller_configuration_gazebo</exec_depend>
  <exec_depend>pmb3_gazebo</exec_depend>
  <exec_depend>pal_hardware_gazebo</exec_depend>
  <exec_depend>pmb3_2dnav_gazebo</exec_depend> 

  <export>
    <metapackage/>
  </export>
</package>